[gd_scene load_steps=18 format=3 uid="uid://d0l15ie1p3nb7"]

[ext_resource type="Script" path="res://Player.gd" id="1_e7v8e"]
[ext_resource type="PackedScene" uid="uid://b8i0fyhpmc1mu" path="res://model/objects/Pistol.glb" id="2_wv0s2"]
[ext_resource type="Texture2D" uid="uid://c047dj7ncbq04" path="res://addons/kenney_particle_pack/star_06.png" id="3_4bhmg"]
[ext_resource type="AudioStream" uid="uid://biibbemlrjai8" path="res://audio/shoot.mp3" id="4_b0td8"]
[ext_resource type="PackedScene" uid="uid://b6fqdm3qdetmp" path="res://model/player/untitled.glb" id="5_vhr1t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_274i4"]

[sub_resource type="Gradient" id="Gradient_gagjg"]
offsets = PackedFloat32Array(0, 0.172727, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_i5gee"]
gradient = SubResource("Gradient_gagjg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4n2qn"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_i5gee")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lrbje"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 0.529412, 1)
albedo_texture = ExtResource("3_4bhmg")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_jk1q1"]
material = SubResource("StandardMaterial3D_lrbje")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_hq2im"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ahhbt"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.284716, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.121772, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bryfu"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.454909, -0.214848, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.558318, -0.196233, -0.5)]
}

[sub_resource type="Animation" id="Animation_yr5sv"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.188289, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.517211, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jgexd"]
_data = {
"RESET": SubResource("Animation_hq2im"),
"idle": SubResource("Animation_ahhbt"),
"move": SubResource("Animation_bryfu"),
"shoot": SubResource("Animation_yr5sv")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qasab"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_e7v8e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.979109, 0)
shape = SubResource("CapsuleShape3D_274i4")

[node name="WorldModel" type="Node3D" parent="."]

[node name="Morty" parent="WorldModel" instance=ExtResource("5_vhr1t")]
transform = Transform3D(-0.996195, 1.52388e-08, -0.0871556, 0, 1, 1.74846e-07, 0.0871556, 1.7418e-07, -0.996195, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.47294, 0)

[node name="Pistol" parent="Camera3D" instance=ExtResource("2_wv0s2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0566336, -0.393699)
layers = 2
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_4n2qn")
draw_pass_1 = SubResource("PlaneMesh_jk1q1")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -20)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jgexd")
}
autoplay = "idle"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qasab")

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b0td8")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
